# invincible-voice

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  PERFORMANCE_ANALYSIS.md  README.md  docker-compose.yml  swarm-config.yml
.github/workflows/: deploy-prod.yml
services/backend/: .dockerignore  Dockerfile  pyproject.toml  voices.yaml
services/backend/backend/: exceptions.py  kyutai_constants.py  main.py  metrics.py  openai_realtime_api_events.py  quest_manager.py  security.py  service_discovery.py  storage.py  timer.py  typing.py  unmute_handler.py  websocket_utils.py
services/backend/backend/libs/: files.py  google.py  health.py  websockets.py
services/backend/backend/llm/: chatbot.py  llm_utils.py  system_prompt.py
services/backend/backend/routes/: __init__.py  auth.py  tts.py  user.py  voices.py
services/backend/backend/stt/: exponential_moving_average.py  speech_to_text.py
services/backend/tests/: test_exponential_moving_average.py
services/frontend/: .prettierrc.json  Dockerfile  README.md  eslint.config.js  hot-reloading.Dockerfile  jest.config.js  jest.setup.js  next.config.ts  package.json  pnpm-lock.yaml
services/frontend/__mocks__/: BubbleTrail.tsx  react-use-websocket.js
services/frontend/public/: audio-output-processor.js  decoderWorker.min.js  encoderWorker.min.js
services/frontend/src/: constants.ts
services/frontend/src/app/: globals.css  layout.tsx  page.tsx
services/frontend/src/auth/: AuthWrapper.tsx  Google.tsx  authContext.tsx  authUtils.ts
services/frontend/src/components/: ContextProvider.tsx  CouldNotConnect.tsx  InvincibleVoice.tsx  KeywordsSuggestion.tsx  ResponseOptions.tsx
services/frontend/src/hooks/: useAudioProcessor.ts  useBackendServerUrl.ts  useKeyboardShortcuts.ts  useMicrophoneAccess.ts  useMobileDetection.ts  (+1 more)
(+59 files in other folders)
